bluejay-validator/tests/snapshots/executable_integration_test__error@argument_uniqueness.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/argument_uniqueness.graphql
---
Error: Multiple arguments with name `dogCommand`
   ╭─[argument_uniqueness.graphql:1:1]
   │
 3 │     doesKnowCommand(dogCommand: SIT, dogCommand: HEEL)
   │                     ─────┬────       ─────┬────  
   │                          ╰─────────────────────── Argument with name `dogCommand`
   │                                           │      
   │                                           ╰────── Argument with name `dogCommand`
───╯

Error: Multiple arguments with name `atOtherHomes`
   ╭─[argument_uniqueness.graphql:1:1]
   │
 9 │     isHouseTrained(atOtherHomes: true, atOtherHomes: false) @include(if: true, if: false)
   │                    ──────┬─────        ──────┬─────  
   │                          ╰─────────────────────────── Argument with name `atOtherHomes`
   │                                              │       
   │                                              ╰─────── Argument with name `atOtherHomes`
───╯

Error: Multiple arguments with name `if`
   ╭─[argument_uniqueness.graphql:1:1]
   │
 9 │     isHouseTrained(atOtherHomes: true, atOtherHomes: false) @include(if: true, if: false)
   │                                                                      ─┬        ─┬  
   │                                                                       ╰──────────── Argument with name `if`
   │                                                                                 │  
   │                                                                                 ╰── Argument with name `if`
───╯
